--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,10 @@ source:
 build:
   number: 0
   skip: True  # [win]
-  script: make -f unix/Makefile generic && mv unzip $PREFIX/bin
+  script: 
+    - make -f unix/Makefile generic
+    - mkdir -p $PREFIX/bin
+    - mv unzip $PREFIX/bin
 
 test:
   commands:
