--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version="6.0" %}
-{% set sha256="036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37"  %}
+{% set version = "6.0" %}
+{% set sha256 = "036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37"  %}
 
 package:
   name: unzip
@@ -15,7 +15,7 @@ build:
   script: 
     - make -f unix/Makefile generic
     - mkdir -p $PREFIX/bin
-    - mv unzip $PREFIX/bin
+    - mv unzip $PREFIX/bin/
 
 test:
   commands:
