--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set version="6.0" %}
-{% set sha256="036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37"  %}
+{% set sha256="036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37" %}
 
 package:
   name: unzip
@@ -13,6 +13,11 @@ build:
   number: 0
   skip: True  # [win]
   script: make -f unix/Makefile generic && mv unzip $PREFIX/bin
+
+requirements:
+  build:
+    - "{{ compiler('c') }}"
+    - make
 
 test:
   commands:
