--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   number: 0
   skip: True  # [win]
   script:
-   - make CC=$CC -DNO_LCHMOD -f unix/Makefile generic
+   - make CC=$CC CF="$CFLAGS $CPPFLAGS -DNO_LCHMOD" -f unix/Makefile generic
    - mkdir $PREFIX/bin
    - mv unzip $PREFIX/bin
 
