--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ build:
   skip: True  # [win]
   script:
    - make CC=$CC CF="$CFLAGS $CPPFLAGS -DNO_LCHMOD" -f unix/Makefile generic
-   - mkdir $PREFIX/bin
+   - mkdir -p $PREFIX/bin
    - mv unzip $PREFIX/bin
 
 requirements:
