--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,11 @@ build:
   number: 0
   skip: True  # [win]
   script:
-   - make CC=$CC D_USE_BZ2=-DUSE_BZIP2 CF="$CFLAGS $CPPFLAGS -DNO_LCHMOD -DUSE_BZIP2" -f unix/Makefile generic
-   - mkdir -p $PREFIX/bin
-   - mv unzip $PREFIX/bin
+   - make CC=$CC D_USE_BZ2=-DUSE_BZIP2 CFLAGS_BZ="$CFLAGS" CF="$CFLAGS $CPPFLAGS -DNO_LCHMOD -I $PREFIX/include -DUSE_BZIP2" -f unix/Makefile generic
+   - make prefix="$PREFIX" install
+#    - mkdir -p $PREFIX/bin
+#    - mv unzip $PREFIX/bin
+#    - mv zipinfo $PREFIX/bin
 
 requirements:
   build:
@@ -27,6 +29,7 @@ requirements:
 test:
   commands:
     - unzip -h
+    - zipinfo -h
 
 about:
   home: http://www.info-zip.org/
