--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win]
   script:
    # Can't build with bzip2 support due to:
@@ -38,5 +38,6 @@ about:
 
 extra:
   recipe-maintainers:
+    - chrisburr
     - msarahan
     - jerowe
