--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ test:
 
 about:
   home: http://www.info-zip.org/
-  license: BSD-like
+  license: LicenseRef-BSD-like
   license_file: LICENSE
   summary: simple program for unzipping files
 
