--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,8 @@ test:
   commands:
     - unzip -h
     - zipinfo -h
+    # Ensure lchmod is not being used by the binary
+    - rc=$(strings $(which unzip) | grep -ci lchmod); [ $rc -eq 0 ]
 
 about:
   home: http://www.info-zip.org/
