--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ build:
    - make -f unix/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I." LFLAGS1="$LDFLAGS" generic  # [osx]
    - make -f unix/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I. -DNO_LCHMOD" LFLAGS1="$LDFLAGS" unzips  # [linux]
    - make prefix="$PREFIX" -f unix/Makefile install  # [unix]
-   - nmake -f win32/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I." LFLAGS1="$LDFLAGS" USEMASM=1  # [win]
+   - nmake -f win32/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I." LFLAGS1="$LDFLAGS" NOASM=1  # [win]
    - xcopy /y /s *.exe *.dll %LIBRARY_BIN%  # [win]
 
 requirements:
