--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: {{ sha256 }}
   patches:
    - avoid_cr.patch  # [win]
+   - include_winnt.patch  # [win]
 
 build:
   number: 3
