Patch to force include of windows.h
Hopeing to resolve this:

error LNK2019: unresolved external symbol InterlockedExchange referenced in function Initialize

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: {{ sha256 }}
   patches:
    - avoid_cr.patch  # [win]
+   - inc_windows_h.patch  # [win]
 
 build:
   number: 3
