--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = "6.0" %}
-{% set sha256 = "036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37" %}
 
 package:
   name: unzip
@@ -7,19 +6,41 @@ package:
 
 source:
   url: ftp://ftp.info-zip.org/pub/infozip/src/unzip{{ version.replace(".", "") }}.tgz
-  sha256: {{ sha256 }}
+  sha256: 036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37
+  patches:
+    # Patches from Debian
+    - patches/01-manpages-in-section-1-not-in-section-1l.patch
+    - patches/02-this-is-debian-unzip.patch
+    - patches/03-include-unistd-for-kfreebsd.patch
+    - patches/04-handle-pkware-verification-bit.patch
+    - patches/05-fix-uid-gid-handling.patch
+    - patches/06-initialize-the-symlink-flag.patch
+    - patches/07-increase-size-of-cfactorstr.patch
+    - patches/08-allow-greater-hostver-values.patch
+    - patches/09-cve-2014-8139-crc-overflow.patch
+    - patches/10-cve-2014-8140-test-compr-eb.patch
+    - patches/11-cve-2014-8141-getzip64data.patch
+    - patches/12-cve-2014-9636-test-compr-eb.patch
+    - patches/13-remove-build-date.patch
+    - patches/14-cve-2015-7696.patch
+    - patches/15-cve-2015-7697.patch
+    - patches/16-fix-integer-underflow-csiz-decrypted.patch
+    - patches/17-restore-unix-timestamps-accurately.patch
+    - patches/18-cve-2014-9913-unzip-buffer-overflow.patch
+    - patches/19-cve-2016-9844-zipinfo-buffer-overflow.patch
+    - patches/20-cve-2018-1000035-unzip-buffer-overflow.patch
+    - patches/21-fix-warning-messages-on-big-files.patch
+    - patches/22-cve-2019-13232-fix-bug-in-undefer-input.patch
+    - patches/23-cve-2019-13232-zip-bomb-with-overlapped-entries.patch
+    - patches/24-cve-2019-13232-do-not-raise-alert-for-misplaced-central-directory.patch
+    - patches/25-cve-2019-13232-fix-bug-in-uzbunzip2.patch
+    - patches/26-cve-2019-13232-fix-bug-in-uzinflate.patch
+    - patches/27-zipgrep-avoid-test-errors.patch
+
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win]
-  script:
-   # Can't build with bzip2 support due to:
-   # > A bzip2 library built with BZ_NO_STDIO should have an
-   # > unresolved external, "bz_internal_error".  The default,
-   # > full-function library will not mention it.
-   - make -f unix/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I." LFLAGS1="$LDFLAGS" generic  # [osx]
-   - make -f unix/Makefile CC=$CC prefix="$PREFIX" CF="$CFLAGS -I. -DNO_LCHMOD" LFLAGS1="$LDFLAGS" unzips  # [linux]
-   - make prefix="$PREFIX" -f unix/Makefile install
 
 requirements:
   build:
