--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,8 @@
 azure:
   store_build_artifacts: true
+bot:
+  version_updates:
+    use_curl: true
 build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
